; ModuleID = '/home/carl/AnghaBench/toxcore/auto_tests/extr_tox_test.c_print_nickchange.c'
source_filename = "/home/carl/AnghaBench/toxcore/auto_tests/extr_tox_test.c_print_nickchange.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"Gentoo\00", align 1
@name_changes = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_nickchange(i32* %0, i32 %1, i32* %2, i64 %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i64 %3, i64* %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i8*, i8** %10, align 8
  %12 = bitcast i8* %11 to i32*
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 974536
  br i1 %14, label %15, label %16

15:                                               ; preds = %5
  br label %26

16:                                               ; preds = %5
  %17 = load i64, i64* %9, align 8
  %18 = icmp eq i64 %17, 7
  br i1 %18, label %19, label %26

19:                                               ; preds = %16
  %20 = load i32*, i32** %8, align 8
  %21 = call i64 @memcmp(i32* %20, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 7)
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %19
  %24 = load i32, i32* @name_changes, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* @name_changes, align 4
  br label %26

26:                                               ; preds = %15, %23, %19, %16
  ret void
}

declare dso_local i64 @memcmp(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
